# schafkopf-ai-coach

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: graph.py  llm.py  main.py  models.py  rules.py  state.py  stich.py  strategy.py  trumpf.py
tests/: test_llm.py  test_models.py  test_rules.py  test_stich.py  test_strategy.py  test_trumpf.py
