[project]                                                                                                                                                                                                                           
name = "schafkopf-ai-coach"                               
version = "0.1.0"                                                                                                                                                                                                                   

[tool.pytest.ini_options]                                                                                                                                                                                                           
pythonpath = ["."] 